fix(swagger): fix swagger
