# server/docs/swagger.yaml
@@ -1262,7 +1262,7 @@ info:
   title: Upet API接口文档
   version: v2.7.0
 paths:
-  /api/auth:
+  /auth:
     post:
       consumes:
       - application/json
@@ -1288,7 +1288,42 @@ paths:
       summary: 微信第三方登录
       tags:
       - Auth
-  /api/family/join/:familyId:
+  /email/emailTest:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"发送成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 发送测试邮件
+      tags:
+      - System
+  /email/sendEmail:
+    post:
+      parameters:
+      - description: 发送邮件必须的参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/response.Email'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"发送成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 发送邮件
+      tags:
+      - System
+  /family/join/:familyId:
     post:
       responses:
         "200":
@@ -1303,7 +1338,7 @@ paths:
       summary: 加入家庭
       tags:
       - Family
-  /api/family/member/:memberId:
+  /family/member/:memberId:
     delete:
       responses:
         "200":
@@ -1332,7 +1367,7 @@ paths:
       summary: 转让家庭管理权限
       tags:
       - Family
-  /api/family/members:
+  /family/members:
     get:
       responses:
         "200":
@@ -1347,7 +1382,7 @@ paths:
       summary: 获取家庭成员列表
       tags:
       - Family
-  /api/file:
+  /file:
     post:
       consumes:
       - multipart/form-data
@@ -1376,7 +1411,51 @@ paths:
       summary: 文件上传
       tags:
       - File
-  /api/pet:
+  /init/checkdb:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 初始化用户数据库
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  additionalProperties: true
+                  type: object
+                msg:
+                  type: string
+              type: object
+      summary: 初始化用户数据库
+      tags:
+      - CheckDB
+  /init/initdb:
+    post:
+      parameters:
+      - description: 初始化数据库参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.InitDB'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 初始化用户数据库
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 初始化用户数据库
+      tags:
+      - InitDB
+  /pet:
     post:
       consumes:
       - application/json
@@ -1404,7 +1483,7 @@ paths:
       summary: 创建宠物
       tags:
       - PetInfo
-  /api/pet-todo:
+  /pet-todo:
     post:
       consumes:
       - application/json
@@ -1432,7 +1511,7 @@ paths:
       summary: 创建宠物待办
       tags:
       - PetTodo
-  /api/pet-todo/:petTodoID:
+  /pet-todo/:petTodoID:
     delete:
       consumes:
       - application/json
@@ -1519,7 +1598,7 @@ paths:
       summary: 更新宠物待办信息
       tags:
       - PetTodo
-  /api/pet-todos:
+  /pet-todos:
     get:
       consumes:
       - application/json
@@ -1551,7 +1630,7 @@ paths:
       summary: 获取所有宠物待办列表
       tags:
       - PetTodo
-  /api/pet-todos/:petTodoID/complete:
+  /pet-todos/:petTodoID/complete:
     put:
       consumes:
       - application/json
@@ -1584,7 +1663,7 @@ paths:
       summary: 更新宠物待办信息
       tags:
       - PetTodo
-  /api/pet-todos/infos:
+  /pet-todos/infos:
     get:
       consumes:
       - application/json
@@ -1612,7 +1691,7 @@ paths:
       summary: 搜索宠物待办信息
       tags:
       - PetTodo
-  /api/pet-todos/mark:
+  /pet-todos/mark:
     post:
       consumes:
       - application/json
@@ -1635,7 +1714,7 @@ paths:
       summary: 获取指定日期中宠物待办标记
       tags:
       - PetTodo
-  /api/pet/:petID:
+  /pet/:petID:
     delete:
       consumes:
       - application/json
@@ -1765,7 +1844,7 @@ paths:
       summary: 更新宠物信息
       tags:
       - PetInfo
-  /api/pets:
+  /pets:
     get:
       consumes:
       - application/json
@@ -1790,134 +1869,6 @@ paths:
       summary: 获取所有宠物列表
       tags:
       - PetInfo
-  /api/user:
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: 用户信息
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.UserInfo'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 用户信息保存结果
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                msg:
-                  type: string
-              type: object
-      summary: 完善用户信息
-      tags:
-      - User
-  /api/user/:id:
-    get:
-      parameters:
-      - description: 用户id
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: 用户信息
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                ' msg':
-                  type: string
-                data:
-                  $ref: '#/definitions/request.UserInfo'
-              type: object
-      summary: 查询用户信息
-      tags:
-      - User
-  /email/emailTest:
-    post:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"success":true,"data":{},"msg":"发送成功"}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 发送测试邮件
-      tags:
-      - System
-  /email/sendEmail:
-    post:
-      parameters:
-      - description: 发送邮件必须的参数
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/response.Email'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"success":true,"data":{},"msg":"发送成功"}'
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 发送邮件
-      tags:
-      - System
-  /init/checkdb:
-    post:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 初始化用户数据库
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  additionalProperties: true
-                  type: object
-                msg:
-                  type: string
-              type: object
-      summary: 初始化用户数据库
-      tags:
-      - CheckDB
-  /init/initdb:
-    post:
-      parameters:
-      - description: 初始化数据库参数
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.InitDB'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 初始化用户数据库
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                data:
-                  type: string
-              type: object
-      summary: 初始化用户数据库
-      tags:
-      - InitDB
   /sysDictionary/createSysDictionary:
     post:
       consumes:
@@ -2632,6 +2583,55 @@ paths:
       summary: 设置配置文件内容
       tags:
       - System
+  /user:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用户信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UserInfo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 用户信息保存结果
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: 完善用户信息
+      tags:
+      - User
+  /user/:id:
+    get:
+      parameters:
+      - description: 用户id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: 用户信息
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                ' msg':
+                  type: string
+                data:
+                  $ref: '#/definitions/request.UserInfo'
+              type: object
+      summary: 查询用户信息
+      tags:
+      - User
 securityDefinitions:
   ApiKeyAuth:
     in: header
